Switches to current Java, removes all references to Servlet jar